# kicad-skills

./: .coveragerc  .gitignore  Makefile  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
skills/kicad-sch-cleanup-loop/: SKILL.md
skills/kicad-sch-cleanup-loop/agents/: openai.yaml
skills/kicad-tool/: SKILL.md
skills/kicad-tool/agents/: openai.yaml
skills/kicad-tool/scripts/: kicad_sch_bbox_collisions.py  kicad_tool.py  pcb_edit.py  pcb_netlist.py  pcb_query.py  sch_edit.py  sch_netlist.py  sch_query.py  score_schematic.py  text_collision_core.py
skills/kicad-workflow/: SKILL.md
skills/kicad-workflow/agents/: openai.yaml
tests/: conftest.py  helpers.py  test_pcb_edit.py  test_pcb_query.py  test_pcb_validate.py  test_sch_edit_junction.py  test_sch_edit_label.py  test_sch_edit_symbol.py  test_sch_edit_wire.py  test_sch_query.py  test_sch_validate.py  test_smoke.py
tests/fixtures/: build_fixtures.py  minimal.kicad_pcb  minimal.kicad_pro  minimal.kicad_sch  minimal_vias.kicad_pcb  minimal_vias.kicad_pro  minimal_zones.kicad_pcb  minimal_zones.kicad_pro
