[project]
name = "kicad-skills"
version = "0.1.0"
description = "AI-agent skills and scripts for working with KiCad schematic and PCB design files."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "kiutils @ git+https://github.com/mash/kiutils.git@77994e0e65c3d97e3f11910fe3d05d1fc3b06fc7",
]
