[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kicad-skills"
version = "0.1.0"
description = "AI-agent skills and scripts for working with KiCad schematic and PCB design files."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "kiutils @ git+https://github.com/mash/kiutils.git@77994e0e65c3d97e3f11910fe3d05d1fc3b06fc7",
]

[project.optional-dependencies]
dev = ["pytest>=8", "coverage[toml]>=7"]

[project.scripts]
kicad-tool = "kicad_tool:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
branch = true

[tool.setuptools]
py-modules = [
  "kicad_tool",
  "score_schematic",
  "kicad_sch_bbox_collisions",
  "text_collision_core",
  "sch_query",
  "sch_edit",
  "sch_netlist",
  "pcb_query",
  "pcb_edit",
  "pcb_netlist",
]

[tool.setuptools.package-dir]
"" = "skills/kicad-tool/scripts"
